# tom-certo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: architecture.md  schema-v1.md
docs/maestro/plans/: auladcanto-mcp-mvp.md
src/auladcanto/: __init__.py  __main__.py  cli.py
src/auladcanto/domain/: batch.py  gabarito.py  perfil_aluno.py
src/auladcanto/domain/analysis/: ataque.py  buffer.py  capture.py  pitch.py  respiracao.py  timing.py  transposicao.py  vibrato.py
src/auladcanto/domain/calibration/: microfone.py
src/auladcanto/domain/comparator/: __init__.py  aligner.py  score.py
src/auladcanto/domain/preparation/: __init__.py  audio_pipeline.py  cifra_search.py  midi_search.py  orchestrator.py  polifonia.py  quality.py  separacao.py
src/auladcanto/mcp/: server.py  state.py
src/auladcanto/mcp/tools/: musica.py  perfil.py  sessao.py
src/auladcanto/storage/: paths.py
src/auladcanto/templates/: CLAUDE.md  SKILL.md
tests/fixtures/musicas/: README.md
tests/golden/: test_batch_scenarios.py
tests/integration/: test_e2e.py  test_mcp_server.py  test_preparation_e2e.py
tests/unit/: test_analyzers_ataque_timing_transp.py  test_analyzers_pitch_vibrato_resp.py  test_calibration.py  test_capture.py  test_cli_smoke.py  test_comparator.py  test_mcp_tools.py  test_polifonia.py  test_preparation.py  test_schema.py  test_storage_paths.py
