[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "auladcanto-mcp"
version = "0.1.0"
description = "Local MCP server for music tutoring (voice + guitar) — analyse audio on your machine and let Claude Code coach you in real time."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Gabriel Leineker", email = "gabriel.leineker@cnhora.com.br" },
]
keywords = ["mcp", "music", "tutoring", "singing", "guitar", "claude"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

# Core runtime dependencies kept lean so bootstrap install works on any Linux box.
# Heavy / platform-sensitive audio deps live in [project.optional-dependencies].audio.
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "httpx>=0.27",
    "numpy>=1.26",
    "pretty_midi>=0.2.10",
]

[project.optional-dependencies]
# Audio analysis stack — installed on demand (`pip install -e ".[audio]"`).
# Kept optional because `aubio`, `crepe`, `basic-pitch`, `demucs` are heavy and
# sometimes fail to build on newer Python versions. ``sounddevice`` lives here
# because PortAudio bindings can fail to build on minimal Linux containers.
audio = [
    "sounddevice>=0.4.6",
    "librosa>=0.10",
    "mir_eval>=0.7",
    # The following are commonly needed but may fail on bleeding-edge Python;
    # users install them via the `audio` extra only when their environment supports it.
    "aubio>=0.4.9; python_version < '3.13'",
]

# MCP protocol bindings — split out so the core CLI works even if the MCP SDK
# is unavailable on a given Python version.
mcp = [
    "mcp>=0.9",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
auladcanto = "auladcanto.cli:app"
auladcanto-mcp = "auladcanto.mcp.server:main"

[project.urls]
Homepage = "https://github.com/gabwolff/auladcanto-mcp"
Documentation = "https://github.com/gabwolff/auladcanto-mcp/blob/main/docs/architecture.md"
Issues = "https://github.com/gabwolff/auladcanto-mcp/issues"

# ---------------------------------------------------------------------------
# Hatch — build backend configuration
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/auladcanto"]

# Explicitly bundle the Claude Code skill templates inside the wheel. They sit
# under ``src/auladcanto/templates/`` and are already picked up by the
# ``packages`` entry above, but force-include makes the intent unambiguous and
# guards against future refactors of the package layout.
[tool.hatch.build.targets.wheel.force-include]
"src/auladcanto/templates/SKILL.md" = "auladcanto/templates/SKILL.md"
"src/auladcanto/templates/CLAUDE.md" = "auladcanto/templates/CLAUDE.md"

[tool.hatch.build.targets.sdist]
include = [
    "src/auladcanto",
    "tests",
    "docs",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "Makefile",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# mypy — strict for src/auladcanto, lenient for tests
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
files = ["src/auladcanto"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Third-party libraries that may lack type stubs — silence missing imports.
[[tool.mypy.overrides]]
module = [
    "aubio.*",
    "librosa.*",
    "sounddevice.*",
    "pretty_midi.*",
    "mir_eval.*",
    "mcp.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests (may touch filesystem)",
    "golden: golden-file regression tests",
    "slow: slow tests that exercise heavier code paths",
]
